--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ footer {
         <h1>Welcome to Recipe Haven</h1>
         <nav>
             <ul>
-                <li><a href="/register/">Register</a></li>
-                <li><a href="/login/">Login</a></li>
-                <li><a href="/recipes/">Recipes</a></li>
+                <li><a href="recipe1/templates/register/">Register</a></li>
+                <li><a href="recipe1/templates/login/">Login</a></li>
+                <li><a href="recipe1/templates/recipes/">Recipes</a></li>
             </ul>
         </nav>
     </header>
