--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ footer {
         <h1>Welcome to Recipe Haven</h1>
         <nav>
             <ul>
-                <li><a href="/register/">Register</a></li>
-                <li><a href="/login/">Login</a></li>
-                <li><a href="/recipes/">Recipes</a></li>
+                 <li><a href="{% url 'login' %}">Login</a></li>
+                 <li><a href="{% url 'register' %}">Register</a></li>
+                 <li><a href="{% url 'recipe' %}">Recipe</a></li>
             </ul>
         </nav>
     </header>
