--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ footer {
         <h1>Welcome to Recipe Haven</h1>
         <nav>
             <ul>
-                 <li><a href='/login/'>Login</a></li>
+                 <li><a href="{% url 'login' %}">Login</a></li>
                  <li><a href='/register/'>Register</a></li>
                  <li><a href='/recipes/'>Recipe</a></li>
             </ul>
